# metalforge

./: .gitignore  Cargo.toml  README.md
config/: config.yaml
crates/metalforge-bevy/: Cargo.toml
crates/metalforge-bevy/src/: config.rs  main.rs
crates/metalforge-bevy/src/tui/: mod.rs
crates/metalforge-bevy/src/ui/: event.rs  keyboard.rs  mod.rs
crates/metalforge-bevy/src/ui/debug/: event.rs  mod.rs
crates/metalforge-bevy/src/ui/menu/: arrangements.rs  event.rs  main_menu.rs  mod.rs  settings.rs  song_library.rs  song_list.rs
crates/metalforge-bevy/src/ui/player/: cursor.rs  event.rs  info.rs  menu.rs  mod.rs  mod2.rs  song_player.rs
crates/metalforge-cli/: Cargo.toml
crates/metalforge-cli/src/: main.rs
crates/metalforge-cpal/: Cargo.toml
crates/metalforge-cpal/src/: lib.rs
crates/metalforge-lib/: Cargo.toml
crates/metalforge-lib/src/: asset.rs  converter.rs  engine.rs  guitar.rs  lib.rs  library.rs  loader.rs  note.rs  part.rs  psarc.rs  song.rs  songfile.rs  track.rs
crates/metalforge-lib/src/event/: mod.rs
crates/metalforge-lib/src/format/: mod.rs
crates/metalforge-lib/src/format/opensongchart/: arrangement.rs  drum_part.rs  instrument_part.rs  keyboard_part.rs  mod.rs  song.rs  vocal_part.rs
crates/metalforge-lib/src/loader/: mod.rs  psarc.rs  songfile.rs
crates/metalforge-lib/src/song/: guitar.rs  instrument_part.rs  key.rs  metadata.rs  mod.rs  song.rs
crates/metalforge-loader/: Cargo.toml
crates/metalforge-loader/src/: converter.rs  explorer.rs  lib.rs  loader.rs  psarc.rs  smither.rs
examples/: Broken.psarc  Test-Artist_Test-Song_v1_m.psarc  Test-Artist_Test-Song_v1_p.psarc
