[package]
name = "metalforge-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
# The main UI dependency
bevy = { version = "0.18", default-features = false, features = [ "2d", "ui" ] }
bevy_dev_tools = "0.18"
bevy_framepace = "0.21"
# Used for transmitting events between the engine and the UI
crossbeam-channel = "0.5"
# For logging
log = "0.4"

# Engine implementation
metalforge-lib = { path = "../metalforge-lib" }
rand = "0.10"
