[package]
name = "metalforge-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
metalforge-lib = { path = "../metalforge-lib" }
rockysmithereens_parser = { git = "https://github.com/tversteeg/rockysmithereens.git", features = [ "profile-with-tracing" ] }
env_logger = "0.11"
log = "0.4"
url = "2.5"
serde_yaml = "0.9.33"
serde = { version = "1.0", features = ["derive"] }